# hospital-management-cpp-gui

./: .gitignore  CMakeLists.txt  README.md  admindashboard.cpp  admindashboard.h  admindashboard.ui  database.cpp  doctordashboard.cpp  doctordashboard.h  doctordashboard.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  pageadmissions.cpp  pageadmissions.h  pageadmissions.ui  pagemedicalrecord.h  pagemedicalrecord.ui  pagepatientappointments.cpp  pagepatientappointments.h  pagepatientappointments.ui  pagepatientprescriptions.cpp  pagepatientprescriptions.h  pagepatientrecord.cpp  pagepatientrecord.h  pagepatientrecord.ui  pagepatients.cpp  pagepatients.h  pagepatientsearch.cpp  pagepatientsearch.h  pagerdv.cpp  pagerdv.h  pagerdv.ui  pagerooms.cpp  pagerooms.h  pageservices.cpp  pageservices.h  pageservices.ui  (+9 more)
src/: main.cpp
src/admin/: admindashboard.cpp  admindashboard.h  pagerooms.h  pagerooms.ui  pageusers.h
src/auth/: loginwindow.ui
src/db/: database.h
src/doctor/: doctordashboard.cpp  doctordashboard.ui  pagemedicalrecord.cpp  pagemedicalrecord.h  pagepatientsearch.ui
src/patient/: pagepatientappointments.h  pagepatientprescriptions.cpp  pagepatientprescriptions.h  pagepatientprescriptions.ui  patientdashboard.h
src/reception/: pageadmissions.cpp  pageadmissions.h  pageadmissions.ui  pagepatients.cpp  pagepatients.h  pagepatients.ui  pagerdv.cpp  receptiondashboard.ui
